# sdl_gameengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
engine/: CMakeLists.txt  Engine.cpp  Entity.cpp  Scene.cpp
engine/components/: BaseComponent.cpp  InputComponent.cpp  RectComponent.cpp  SpriteComponent.cpp  TransformComponent.cpp
engine/include/: Engine.h  Entity.h  Scene.h
engine/include/components/: BaseComponent.h  InputComponent.h  RectComponent.h  SpriteComponent.h  TransformComponent.h
engine/include/systems/: BaseSystem.h  EventSystem.h  InputButons.h  InputSystem.h  RenderSystem.h  Types.h
engine/systems/: BaseSystem.cpp  EventSystem.cpp  InputSystem.cpp  RenderSystem.cpp
games/pong/: CMakeLists.txt  app.cpp
games/pong/component/: PlayerComponent.cpp
games/pong/include/components/: PlayerComponent.h
games/pong/include/systems/: PlayerSystem.h
games/pong/systems/: PlayerSystem.cpp
pong/: CMakeLists.txt  app.cpp
tests/: CMakeLists.txt  component_test.h  scene_test.h  testlib.cpp
